# LinguAIcoach

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  model_card.md  pyproject.toml
.github/: FUNDING.yml  sync_hf_space.yaml
.github/workflows/: sync_hf_space.yml
.streamlit/: config.toml
exam_guides/: b2_fce_speaking_img_desc.txt  b2_fce_speaking_opinion.txt  b2_fce_speaking_questions.txt  lessons.json
reports/: mypy.xml
src/: config.json  main.py  utils.py  whisper_transcription.py
src/models/: generator.py  lc_base_model.py  lc_img_desc_model.py  lc_qa_model.py  model_factory.py
src/models/base/: base_model.py
src/models/evaluator/: img_evaluator.py  text_evaluator.py
